testsuite/tests/properties/invalid_eq/int_bool.lkt
import common

class Example: FooNode {
    @export fun prop(): Bool = 1 == true
}
